Add support for updating full contents
