# rfd-api/src/server.rs
@@ -29,7 +29,10 @@ use crate::{
             device_token::{exchange_device_token, get_device_provider},
         },
         mappers::{create_mapper, delete_mapper, get_mappers},
-        rfd::{get_rfd, get_rfd_attr, get_rfds, search_rfds, set_rfd_attr, update_rfd_visibility},
+        rfd::{
+            get_rfd, get_rfd_attr, get_rfds, search_rfds, set_rfd_attr, set_rfd_content,
+            update_rfd_visibility,
+        },
         webhook::github_webhook,
         well_known::{jwks_json, openid_configuration},
     },
@@ -88,6 +91,8 @@ pub fn server(
     // RFDs
     api.register(get_rfds).expect("Failed to register endpoint");
     api.register(get_rfd).expect("Failed to register endpoint");
+    api.register(set_rfd_content)
+        .expect("Failed to register endpoint");
     api.register(get_rfd_attr)
         .expect("Failed to register endpoint");
     api.register(set_rfd_attr)
